--- a/c4_ex/cinema_up.html
+++ b/c4_ex/cinema_up.html
@@ -25,6 +25,8 @@
 				["5:00pm", "9:00pm"]);
 			alert(forbiddenPlanetMovie.getNextShowing());
 
+			var mirimMovie = new Movie("미림 영상", "현대 SF", 3, ["3:00pm", "4:00pm", "9:00pm", "10:00pm"]);
+			alert(mirimMovie.getNextShowing());
 		}
 
 		function Movie(title, genre, rating, showtimes) {
