--- a/c4_ex/songsup.html
+++ b/c4_ex/songsup.html
@@ -5,16 +5,18 @@
   <title>곡 제시 프로그램</title>
   <meta charset="utf-8">
   <script>
+    var num = prompt("좋아하는 노래의 단어를 입력하세요","");
     var songs = [
-      "Don't Stop Bitleaving, by Jourbee",
-      "Material Geek, by Modonna",
-      "Just Code, by Lady LaLa",
-      "We're Not Going to Code It, by Twisted System",
-      "Code on Eileen, by Dexy's Midnight Webbers"
+      "봄이 왔어요",
+      "여름이 왔어요",
+      "가을이 왔어요",
+      "겨울이 왔어요"
     ];
     function suggestSong() {
       //추가 1 함수만들기
       var index = Math.floor(Math.random() * songs.length);
+      document.write("총" + songs.length + " 곡이 준비되어 있습니다.");
+      document.write("<p>" + index + "번째곡");
       var suggestion = songs[index];
       return suggestion;
     }
@@ -24,16 +26,15 @@
       for (var i = 0; i < songs.length; i++) {
         song = songs[i];
         if (songs[i].indexOf(word) >= 0) {
-          return song;
+          return song + " 곡이 있습니다.";
         }
       }
       return "없는 곡입니다.";
     }
     var song = suggestSong();
-    var matchedSong = searchForSong("Code");
-    alert(matchedSong);
-
-
+    document.write("  오늘의 추천곡은 " + song + " 입니다.");
+    var matchedSong = searchForSong(num);
+    document.write("<p>" + matchedSong);
   </script>
 </head>
 
