--- a/1bootstrap_ex/bootstrap_ex/22navbar/calculator.html
+++ b/1bootstrap_ex/bootstrap_ex/22navbar/calculator.html
@@ -1,5 +1,5 @@
 <html>
-<head><meta charset="utf-8"><title>claculator</title>
+<head><meta charset="utf-8"><title>3313지유정_CALCULATOR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -8,9 +8,9 @@
 
 <style>
       body{
-      background-color:rgb(255, 230, 255);} 
+      background-color:rgb(252, 245, 184);} 
       .box{
-      background-color:#3366ff;
+      background-color:#7e9dfc;
       height:350px;
       width:290px;
       border-radius:10px;
@@ -50,28 +50,28 @@
       cursor:pointer;
       border-top:2px solid transparent;}
       .button.gray{
-      color:white;
-      background-color:#9d9d9d; 
-      border-top: lightgray 2px solid;
+      color:rgb(83, 83, 83);
+      background-color:#f3fab3; 
+      border-top: rgb(168, 157, 0) 2px solid;
       border-bottom:black 2px solid;
       }
       .button.aqua{
       color:yellow;
-      background-color:aqua;
-      border-top: blue 2px solid;
+      background-color:rgb(255, 171, 102);
+      border-top: rgb(184, 110, 0) 2px solid;
       border-bottom:black 2px solid;
       }
       .button.blue{
-      color:white;
-      background-color:blue;
-      border-top:2px aqua solid;
-      border-bottom:red 2px solid;
+      color:rgb(255, 255, 255);
+      background-color:rgb(187, 145, 255);
+      border-top:2px rgb(86, 0, 167) solid;
+      border-bottom:rgb(0, 0, 0) 2px solid;
       }
 
       .button.red{
       color:black;
-      background-color:red;
-      border-top:2px FF9933 solid;
+      background-color:rgb(145, 248, 151);
+      border-top:2px #0b8100 solid;
       border-bottom:black 2px solid;
       }
       .gray:active{
@@ -172,7 +172,7 @@ document.getElementById("d").value = document.getElementById("d").value.slice(0,
             </div>
           </div>
         <br><br><br><br>
-          <button type="button" class="btn btn-outline-primary"><a href="index.html">HOME</a></button>
+        <center><button type="button" class="btn bg-warning"><a href="index.html">HOME</a></button></center>
       </div>
     </div>
   </center>
