--- a/1bootstrap_ex/bootstrap_ex/22navbar/jquery1/jquery1.html
+++ b/1bootstrap_ex/bootstrap_ex/22navbar/jquery1/jquery1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>3300윤선희_내가 좋아하는 꽃</title>
+  <title>3313지유정_내가 좋아하는 꽃</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -48,11 +48,11 @@ $(document).ready(function() {
 		<img class="scape_hidden" src="images/fig7.jpg" />
 		<img class="scape_hidden" src="images/fig8.jpg" />
 	</div><br>
-	<button type="button" class="btn btn-danger btn-sm" button id="slideStart">Slide Show!</button>
-	<button type="button" class="btn btn-danger btn-sm" button id="slideStop">Stop Slide Show!</button>
+	<button type="button" class="btn btn-outline-danger btn-sm" button id="slideStart">Slide Show!</button>
+	<button type="button" class="btn btn-outline-danger btn-sm" button id="slideStop">Stop Slide Show!</button>
 </div> 
 <br><br>
-<center><button type="button"  class="btn btn-outline-primary"><a href="../index.html">HOME</a></button></center>
+<center><button type="button" class="btn bg-warning"><a href="../index.html">HOME</a></button></center>
 </body>
 </html>
 
