--- a/1bootstrap_ex/bootstrap_ex/22navbar/jquery2/sunny.html
+++ b/1bootstrap_ex/bootstrap_ex/22navbar/jquery2/sunny.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>3300윤선희_달력만들기</title>
+  <title>3313지유정_달력만들기</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -42,6 +42,6 @@ $( "#dialog-link, #icons li" ).hover(
 );
 </script>
 <br>
-<center><button type="button" class="btn btn-outline-primary"><a href="../index.html">HOME</a></button></center>
+<center><button type="button" class="btn bg-warning"><a href="../index.html">HOME</a></button></center>
 </body>
 </html>
