--- a/1bootstrap_ex/bootstrap_ex/22navbar/midwav.html
+++ b/1bootstrap_ex/bootstrap_ex/22navbar/midwav.html
@@ -1,19 +1,28 @@
 <html>
-    <head>
-        <title>동영상교실</title>
-        <meta charset="utf-8">
-    </head>
-    <body bgcolor=#330000>
-        <font color=blue>
-            <center>
-                <h2>컨트롤박스보이기</h2>
-                <embed src="multi/loveme.mp3" width="600" height="100" hidden="false">
-                <br>
-                </embed>
-            </center>
-        </font>
+
+<head>
+    <title>3313지유정_AUDIO</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+</head>
+
+<body style="background-color:#f5e8a3">
+    <center>
         <br>
-        <center>
-            <a href="index.html">HOME</center>
-    </body>
+        <h3>Show controlbox</h3><br><br>
+        <!-- <embed src="multi/loveme.mp3" width="600" height="100" hidden="false">
+                <br>
+                </embed> -->
+        <audio controls>
+            <source src="multi/loveme.mp3" type="audio/mpeg">
+        </audio>
+    </center>
+    <br>
+    <center><button type="button" class="btn bg-warning"><a href="index.html">HOME</a></button></center>
+</body>
+
 </html>
