--- a/1bootstrap_ex/bootstrap_ex/22navbar/table.html
+++ b/1bootstrap_ex/bootstrap_ex/22navbar/table.html
@@ -1,82 +1,82 @@
-<html>
+<html lang="en">
 <head>
-  <title>시간표</title>
+  <title>3313지유정_TIMETABLE</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </head>
-<body bgcolor=#ffccff>
-  <center>
+<body>
+    <div class="container">
+        <div class="container mt-3" class="bg-primary">
+            <div class="media border p-1" class="bg-primary">
+                <div class="media-body">
+                    <table class="table table-striped" style="text-align:center;">
+                        <thead>
+                            <tr>
+                                <th>T</th>
+                                <th>&nbsp;월</th>
+                                <th>&nbsp;화</th>
+                                <th>&nbsp;수</th>
+                                <th>&nbsp;목</th>
+                                <th>&nbsp;금</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th>&nbsp;1<br><small>(8:30~9:20)</small></th>
+                                <td rowspan="2">DBP</td>
+                                <td rowspan="2">사무<br>관리</td>
+                                <td rowspan="2">node.js</td>
+                                <td rowspan="2">node.js</td>
+                                <td rowspan="2">Ajax</td>
+                            </tr>
+                            <tr>
+                                <th>&nbsp;2<br><small>(9:30~10:20)</small></th>
+                            </tr>
+                            <tr>
+                                <th>&nbsp;3<br><small>(10:30~11:20)</small></th>
+                                <td>운동</td>
+                                <td rowspan="2">UI/UX</td>
+                                <td rowspan="2">UI/UX</td>
+                                <td>Ajax</td>
+                                <td>영어</td>
+                            </tr>
+                            <tr>
+                                <th>&nbsp;4<br><small>(11:30~12:20)</small></th>
+                                <td>진로</td>
+                                <td>영어</td>
+                                <td>진로</td>
+                            </tr>
+                            <tr>
+                                <th>&nbsp;5<br><small>(13:20~14:10)</small></th>
+                                <td>영어</td>
+                                <td>수학</td>
+                                <td>영어</td>
+                                <td>수학</td>
+                                <td>DBP</td>
+                            </tr>
+                            <tr>
+                                <th>&nbsp;6<br><small>(14:20~15:10)</small></th>
+                                <td rowspan="2">Ajax</td>
+                                <td rowspan="2">운영체제</td>
+                                <td rowspan="2">CA</td>
+                                <td rowspan="2">DBP</td>
+                                <td rowspan="2">운영체제</td>
+                            </tr>
+                            <tr>
+                                <th>&nbsp;7<br><small>(15:20~16:10)</small></th>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div><!-- <div class="media-body"> -->
+            </div><!-- <div media border p-1" class="bg-primary"> -->
+        </div><!-- <div class="container mt-3" class="bg-primary"> -->
+    </div><!-- <div class="container"> -->
+    
     <br>
-    <font color=blue size=7>시간표</font>
-    <br>
-      <table border=1 cellpadding=10 bordercolor=magenta background="imgs/bg-sunny.jpg">
-        <tr align=center>
-            <th width=65><font color=red size=5>교시<br>요일</font></th>
-            <th width=65><FONT color=red size=5>&nbsp;월</font></th>
-            <th width=65><FONT color=red size=5>&nbsp;화</font></th>
-            <th width=65><FONT color=red size=5>&nbsp;수</font></th>
-            <th width=65><FONT color=red size=5>&nbsp;목</font></th>
-            <th width=65><FONT color=red size=5>&nbsp;금</font></th>
-            <th width=65><FONT color=red size=5>&nbsp;토</font></th>
-        </tr>
-        <font color=green>
-        <tr align=center text="#ff0000">
-            <th>1</th>
-            <td>자바</td>
-            <td rowspan=2>국어</td>
-            <td>자바</td>
-            <td rowspan=2>자바
-            <br>실습</td>
-            <td>정보보호</td>
-            <td>HR</td>
-        </tr>
-        <tr align=center text="green">
-            <th>2</th>
-            <td>수학</td>
-            <td>과학</td>
-            <td>체육</td>
-            <td>CA</td>
-        </tr>
-            <tr align=center text="green">
-            <th>3</th>
-            <td rowspan=2>자바</td>
-            <td>영어</td>
-            <td>문학</td>
-            <td>국사</td>
-            <td>수학</td>
-            <td rowspan=5>&nbsp;</td>
-        </tr>
-        <tr align=center text="green">
-            <th>4</th>
-            <td rowspan=2>국어</td>
-            <td>사회</td>
-            <td>사회</td>
-            <td>영어</td>
-        </tr>
-        <tr align=center text="green">
-            <th>5</th>
-            <td rowspan=2>회계
-            <br>실무</td>
-            <td>체육</td>
-            <td rowspan=2>자바
-            <br>구조</td>
-            <td>정보기초</td>
-        </tr>
-        <tr align=center text="green">
-            <th>6</th>
-            <td rowspan=2>자바
-            <br>실습</td>
-            <td>수학</td>
-            <td>문학</td>
-        </tr>
-        <tr align=center text="green">
-            <th>7</th>
-            <td>&nbsp;</td>
-            <td>영어</td>
-            <td>한문</td>
-            <td>국어</td>
-        </tr>
-        </font>
-      </table>
-    <center><a href="index.html">HOME</center>
+    <center><button type="button" class="btn bg-warning"><a href="index.html">HOME</a></button></center>
 </body>
 </html>
