bootstrap - navbar with dropdown

--- a/1bootstrap_ex/bootstrap_ex/22navbar/profile.html
+++ b/1bootstrap_ex/bootstrap_ex/22navbar/profile.html
@@ -10,7 +10,7 @@
     </head>
   <body>
     <div class="container mt-3" class="bg-primary">
-      <h3 align=center>My profile</h3>
+      <h3 align=center>PROFILE</h3>
       <p align=center>개발자</p><br>
       <div class="media border p-1" class="bg-primary">
         <img src="imgs/3313.jpg" alt="John Doe" class="mr-3 mt-3 rounded-circle" style="width: 120px; margin-left:15px;">
