--- a/1bootstrap_ex/bootstrap_ex/22navbar/index.html
+++ b/1bootstrap_ex/bootstrap_ex/22navbar/index.html
@@ -8,9 +8,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <script>
-/*   $(document).ready(function(){
-    $('[data-toggle="popover"]').popover();   
-  }); */
+    $(document).ready(function () {
+      $('[data-toggle="popover"]').popover();
+    });
   </script>
 </head>
 <body>
@@ -18,19 +18,19 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="index.html">HOME</a>
+      <a class="nav-link" href="index.html" data-toggle="popover" data-trigger="hover" data-content="초기화면입니다.">HOME</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="profile.html">PROFILE</a>
+      <a class="nav-link active" href="profile.html" data-toggle="popover" data-trigger="hover" data-content="나의 프로필입니다.">PROFILE</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="table.html">TIMETABLE</a>
+      <a class="nav-link" href="table.html" data-toggle="popover" data-trigger="hover" data-content="실시간 반영되니 참고하세요.">TIMETABLE</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="lecture.html">DOCUMENTS</a>
+      <a class="nav-link" href="lecture.html" data-toggle="popover" data-trigger="hover" data-content="다운받아 사용하세요.">DOCUMENTS</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="board.html">BOARD</a>
+      <a class="nav-link" href="board.html" data-toggle="popover" data-trigger="hover" data-content="아직은 수정중입니다.">BOARD</a>
     </li>
     <!-- Dropdown -->
     <li class="nav-item dropdown">
