--- a/1bootstrap_ex/bootstrap_ex/32scrollspy/index.html
+++ b/1bootstrap_ex/bootstrap_ex/32scrollspy/index.html
@@ -55,17 +55,18 @@
     </div>
     </div>
 <div id="profile.html" class="container-fluid bg-warning" style="padding-top:70px;padding-bottom:470px">
- <div class="container mt-3" class="bg-primary">
-  <h3>My profile</h3>
-  <p> 프론트 엔드개발자</p><br>
-  <div class="media border p-1" class="bg-primary" >
-    <img src="imgs/girl.png" alt="John Doe" class="mr-3 mt-3 rounded-circle" style="width:60px;" >
-    <div class="media-body">
-      <h4>홍 길 동   <small><i>프론트 앤드 개발자가 되기 위해 공부를 하고 있습니다.</i></small></h4>
-      <p>관심사</p>
-      <ul>
-        <li>jquery</li><li>bootstrap</li><li>vue.js</li><li>node.js</li>
-      </ul>
+  <div class="container mt-3" class="bg-primary">
+    <h3 align=center>PROFILE</h3>
+    <p align=center>개발자</p><br>
+    <div class="media border p-1" class="bg-primary">
+      <img src="imgs/3313.jpg" alt="John Doe" class="mr-3 mt-3 rounded-circle" style="width: 120px; margin-left:15px;">
+      <div class="media-body">
+        <h4>지유정  <small><i>개발자가 되기 위해 열심히 공부하고 있습니다.</i></small></h4>
+        <p>관심사</p>
+        <ul>
+          <li>Java</li><li>Html5</li><li>JavaScript</li><li>Python</li>
+        </ul>
+      </div>
     </div>
   </div>
   <br><center><button type="button" class="btn btn-outline-dark"><a href="index.html">HOME</a></button></center>
@@ -101,12 +102,12 @@
 </div>
 <div id="board.html" class="container-fluid bg-dark" style="padding-top:170px;padding-bottom:470px">
   <div class="container mt-3" class="bg-primary">
-    <div class="media border p-3" class="bg-primary" >
-        <img src="imgs/공사중.gif" alt="John Doe" class="mr-3 mt-3 rounded-circle" style="width:60px;" >
-        <div class="media-body">
-            지금은 공사중입니다.<br>
-            <font size=3 color=green>다음기회에 더좋은 <font size=5 color=red>게시판</font>으로 연결하겠습니다</img></font>
-        </div>
+    <div class="media border p-3" class="bg-primary">
+      <img src="imgs/shining.gif" alt="John Doe" class="mr-3 mt-3 rounded-circle" style="width:50px;">
+      <div class="media-body">
+        지금은 수정중입니다.<br>
+        곧 더 좋은 <font size=+3 color=blue>게시판</font>으로 찾아오겠습니다.</img>
+      </div>
     </div>
     <br><center><button type="button" class="btn btn-outline-light"><a href="index.html">HOME</a></button></center>
   </div>
