--- a/0(w3schools)bootstrap_ex/jumbotraon_button.html
+++ b/0(w3schools)bootstrap_ex/jumbotraon_button.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -18,9 +19,9 @@
       <div class="text-danger">
         <h2>Welcome to My Homepage</h2><br>
       </div>
-      <button type="button" class="btn btn-primary btn-md">로그인</button>
-      <button type="button" class="btn btn-primary btn-md">로그아웃</button>
-      <button type="button" class="btn btn-primary btn-md">회원가입</button>
+      <button type="button" class="btn btn-primary btn-md"><i class="fas fa-sign-in-alt" style="font-size:30p; color:black;">로그인</i></button>
+      <button type="button" class="btn btn-primary btn-md"><i class="fas fa-sign-out-alt" style="font-size:30p; color:black;">로그아웃</i></button>
+      <button type="button" class="btn btn-primary btn-md"><i class="fas fa-user-plus" style="font-size:30p; color:black;">회원가입</i></button>
     </div>
   </div>
 </body>
