--- a/1bootstrap_ex/bootstrap_ex/22navbar/index.html
+++ b/1bootstrap_ex/bootstrap_ex/22navbar/index.html
@@ -2,7 +2,12 @@
 <head>
   <title>3313지유정_Bootstrap 4 Navigation Bar</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+  <link rel="apple-touch-icon" sizes="180x180" href="imgs/logo.png" />
+  <link rel="icon" type="image/png" href="imgs/logo.png" sizes="192x192" />
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
