--- a/2themedesign_ex/profile.html
+++ b/2themedesign_ex/profile.html
@@ -1,7 +1,6 @@
 <html>
-
-<head>
-    <title>3313지유정_AUDIO</title>
+  <head>
+    <title>3313지유정_PROFILE</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="imgs/logo.png" />
@@ -12,21 +11,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-</head>
-
-<body style="background-color:#f5e8a3">
-    <center>
-        <br>
-        <h3>Show controlbox</h3><br><br>
-        <!-- <embed src="multi/loveme.mp3" width="600" height="100" hidden="false">
-                <br>
-                </embed> -->
-        <audio controls>
-            <source src="multi/loveme.mp3" type="audio/mpeg">
-        </audio>
-    </center>
+    </head>
+  <body>
+    <div class="container mt-3" class="bg-primary">
+      <h3 align=center>PROFILE</h3>
+      <p align=center>개발자</p><br>
+      <div class="media border p-1" class="bg-primary">
+        <img src="imgs/3313.jpg" alt="John Doe" class="mr-3 mt-3 rounded-circle" style="width: 120px; margin-left:15px;">
+        <div class="media-body">
+          <h4>지유정  <small><i>개발자가 되기 위해 열심히 공부하고 있습니다.</i></small></h4>
+          <p>관심사</p>
+          <ul>
+            <li>Java</li><li>Html5</li><li>JavaScript</li><li>Python</li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <br>
     <center><button type="button" class="btn bg-warning"><a href="index.html">HOME</a></button></center>
-</body>
-
+  </body>
 </html>
