--- a/2themedesign_ex/table.html
+++ b/2themedesign_ex/table.html
@@ -1,77 +1,86 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>시간표</title>
-    <meta charset="utf-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+<head>
+  <title>3313지유정_TIMETABLE</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+  <link rel="apple-touch-icon" sizes="180x180" href="imgs/logo.png" />
+  <link rel="icon" type="image/png" href="imgs/logo.png" sizes="192x192" />
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  </head>
+</head>
 <body>
     <div class="container">
         <div class="container mt-3" class="bg-primary">
-            <div class="media border p-1" class="bg-primary" >
+            <div class="media border p-1" class="bg-primary">
                 <div class="media-body">
-
-                    <table  class="table table-striped">
+                    <table class="table table-striped" style="text-align:center;">
                         <thead>
-                            <tr align=center >
+                            <tr>
                                 <th>T</th>
-                                <th>&nbsp;월</font></th>
-                                <th>&nbsp;화</font></th>
-                                <th>&nbsp;수</font></th>
-                                <th>&nbsp;목</font></th>
-                                <th>&nbsp;금</font></th>
+                                <th>&nbsp;월</th>
+                                <th>&nbsp;화</th>
+                                <th>&nbsp;수</th>
+                                <th>&nbsp;목</th>
+                                <th>&nbsp;금</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <th>&nbsp;1</th>
-                                <td>자바</td>
-                                <td rowspan=2>네트<br>워크</td>
-                                <td>자바</td>
-                                <td rowspan=2>자바<br>실습</td>
-                                <td>운영체제</td>
+                                <th>&nbsp;1<br><small>(8:30~9:20)</small></th>
+                                <td rowspan="2">DBP</td>
+                                <td rowspan="2">사무<br>관리</td>
+                                <td rowspan="2">node.js</td>
+                                <td rowspan="2">node.js</td>
+                                <td rowspan="2">Ajax</td>
                             </tr>
                             <tr>
-                                <th>&nbsp;2</th>
-                                <td>수학</td>
-                                <td>물리</td>
-                                <td rowspan=2>영상실습</td>
+                                <th>&nbsp;2<br><small>(9:30~10:20)</small></th>
                             </tr>
                             <tr>
-                                <th>&nbsp;3</th>
-                                <td rowspan=2>정보<br>보안</td>
-                                <td>영어</td>
-                                <td>문학</td>
-                                <td rowspan=2>예술</td>
-                            </tr>
-                            <tr>
-                                <th>&nbsp;4</th>
-                                <td rowspan=2>c++<br>실습</td>
-                                <td>웹앱</td>
+                                <th>&nbsp;3<br><small>(10:30~11:20)</small></th>
+                                <td>운동</td>
+                                <td rowspan="2">UI/UX</td>
+                                <td rowspan="2">UI/UX</td>
+                                <td>Ajax</td>
                                 <td>영어</td>
                             </tr>
                             <tr>
-                                <th>&nbsp;5</th>
-                                <td rowspan=2>운영체제</td>
+                                <th>&nbsp;4<br><small>(11:30~12:20)</small></th>
                                 <td>진로</td>
-                                <td  rowspan=2>자료구조</td>
+                                <td>영어</td>
+                                <td>진로</td>
                             </tr>
                             <tr>
-                                <th>&nbsp;6</th>
-                                <td >자바</td>
+                                <th>&nbsp;5<br><small>(13:20~14:10)</small></th>
+                                <td>영어</td>
                                 <td>수학</td>
-                                <td>&nbsp;</td>
+                                <td>영어</td>
+                                <td>수학</td>
+                                <td>DBP</td>
+                            </tr>
+                            <tr>
+                                <th>&nbsp;6<br><small>(14:20~15:10)</small></th>
+                                <td rowspan="2">Ajax</td>
+                                <td rowspan="2">운영체제</td>
+                                <td rowspan="2">CA</td>
+                                <td rowspan="2">DBP</td>
+                                <td rowspan="2">운영체제</td>
+                            </tr>
+                            <tr>
+                                <th>&nbsp;7<br><small>(15:20~16:10)</small></th>
                             </tr>
                         </tbody>
                     </table>
-                </div>
-            </div>
-        </div>
-    </div><br> 
-<center><button type="button"  class="btn btn-outline-primary"><a href="index.html">HOME</a></button></center>
+                </div><!-- <div class="media-body"> -->
+            </div><!-- <div media border p-1" class="bg-primary"> -->
+        </div><!-- <div class="container mt-3" class="bg-primary"> -->
+    </div><!-- <div class="container"> -->
+    
+    <br>
+    <center><button type="button" class="btn bg-warning"><a href="index.html">HOME</a></button></center>
 </body>
 </html>
