--- a/2themedesign_ex/jquery1/jquery1.html
+++ b/2themedesign_ex/jquery1/jquery1.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="">
 <head>
-  <title>Bootstrap Example</title>
+  <title>3313지유정_내가 좋아하는 꽃</title>
   <meta charset="utf-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+  <link rel="apple-touch-icon" sizes="180x180" href="../imgs/logo.png" />
+  <link rel="icon" type="image/png" href="../imgs/logo.png" sizes="192x192" />
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -49,11 +52,11 @@ $(document).ready(function() {
 		<img class="scape_hidden" src="images/fig7.jpg" />
 		<img class="scape_hidden" src="images/fig8.jpg" />
 	</div><br>
-	<button type="button" class="btn btn-danger btn-sm" button id="slideStart">Slide Show!</button>
-	<button type="button" class="btn btn-danger btn-sm" button id="slideStop">Stop Slide Show!</button>
+	<button type="button" class="btn btn-outline-danger btn-sm" button id="slideStart">Slide Show!</button>
+	<button type="button" class="btn btn-outline-danger btn-sm" button id="slideStop">Stop Slide Show!</button>
 </div> 
 <br><br>
-<center><button type="button"  class="btn btn-outline-primary"><a href="../index.html">HOME</a></button></center>
+<center><button type="button" class="btn bg-warning"><a href="../index.html">HOME</a></button></center>
 </body>
 </html>
 
