--- a/2themedesign_ex/jquery2/sunny.html
+++ b/2themedesign_ex/jquery2/sunny.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-  <title>달력만들기</title>
+  <title>3313지유정_달력만들기</title>
   <meta charset="utf-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+  <link rel="apple-touch-icon" sizes="180x180" href="../imgs/logo.png" />
+  <link rel="icon" type="image/png" href="../imgs/logo.png" sizes="192x192" />
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -42,9 +45,7 @@ $( "#dialog-link, #icons li" ).hover(
 	}
 );
 </script>
-
-<br><br>
-<center><button type="button"  class="btn btn-outline-primary"><a href="../index.html">HOME</a></button></center>
-
+<br>
+<center><button type="button" class="btn bg-warning"><a href="../index.html">HOME</a></button></center>
 </body>
 </html>
