--- a/2themedesign_ex/index.html
+++ b/2themedesign_ex/index.html
@@ -166,7 +166,7 @@
       <div class="col-sm-6">
         <h2>GITHUB</h2>
         <font size=3><a href="https://github.com/jiyujung">my github</a></font>
-        <img src="imgs/github.png" alt="motto" class="mr-3 mt-3 Thumbnail" top-magrin: style="height:250px;">
+        <img src="imgs/github.PNG" alt="motto" class="mr-3 mt-3 Thumbnail" top-magrin: style="height:250px;">
       </div>
     </div>
 
