--- a/2themedesign_ex/index.html
+++ b/2themedesign_ex/index.html
@@ -52,7 +52,7 @@
     <h4>welcome to yujung's homepage</h4>
   </div>
   <!--메뉴버튼-->
-  <nav class="navbar navbar-expand-md bg-primary navbar-dark">
+  <nav class="navbar navbar-expand-md bg-success navbar-dark">
     <a class="navbar-brand" href="index.html" data-toggle="popover" data-trigger="hover" data-content="초기화면입니다">HOME</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -93,7 +93,7 @@
         <font size=3>MY WORK</font>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
-            <a class="nav-link active" href="calculator.html" data-toggle="popover"
+            <a class="nav-link active bg-success" href="calculator.html" data-toggle="popover"
               data-content="계산하는프로그램">CALCULATOR</a>
           </li>
           <li class="nav-item">
