--- a/2themedesign_ex/index.html
+++ b/2themedesign_ex/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta charset="utf-8">
   <title>3313지유정_Bootstrap4를 이용한 포트폴리오</title>
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="imgs/logo.png" />
