--- a/c5_ek/6watchme/myLoc.html
+++ b/c5_ek/6watchme/myLoc.html
@@ -3,16 +3,17 @@
 <head>
 <title>어디를 가더라도 거기엔 여러분이 있습니다</title>
 <meta charset="utf-8">
-<script src="https://maps.google.com/maps/api/js?key=abc"></script>
+<script src="https://maps.google.com/maps/api/js?key=AIzaSyD0dTlLe0Ly-mXcGG9B_BmvhaeAVrha2To"></script>
 <script src="myLoc.js"></script>
 <link rel="stylesheet" href="myLoc.css">
 </head>
 <body>
 
 <!--추가1-->
-
-
-
+<form>
+    <input type = "button" id = "watch" value="Watch me">
+    <input type = "button" id = "clearWatch" value = "Clear watch">
+</form>
 
 <div id="location">
 여러분의위치가 여기에 나타날 것입니다.
