--- a/c5_ek/7watchmepan/myLoc.html
+++ b/c5_ek/7watchmepan/myLoc.html
@@ -3,7 +3,7 @@
 <head>
 <title>어디를 가더라도 거기엔 여러분이 있습니다</title>
 <meta charset="utf-8">
-<script src="http://maps.google.com/maps/api/js?key=abc"></script>
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyD0dTlLe0Ly-mXcGG9B_BmvhaeAVrha2To"></script>
 
 <script src="myLoc.js"></script>
 <link rel="stylesheet" href="myLoc.css">
