--- a/c5_ek/8m_map_jquery/index.html
+++ b/c5_ek/8m_map_jquery/index.html
@@ -1,19 +1,46 @@
+<!doctype html>
+<html>
+
 <head>
     <title>3313지유정_Map Tracker</title>
     <meta charset="utf-8">
-    <meta name = "viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="./logo_apple.png"><!-- sizes="192X192"-->
-    <link rel="apple-touch-icon" href="./logo_apple.png"><!-- sizes="180X180"-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="logo.png"><!-- sizes="192X192"-->
+    <link rel="apple-touch-icon" href="logo.png"><!-- sizes="180X180"-->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css"/>
-    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
     <script src="https://maps.google.com/maps/api/js?key=AIzaSyD0dTlLe0Ly-mXcGG9B_BmvhaeAVrha2To"></script>
-    </script>
     <script src="m_myLoc.js"></script>
-    <link rel="stylesheet" href="m_myLoc.js">
-
+    <link rel="stylesheet" href="m_myLoc.css">
 </head>
+
+<body>
+    <div data-role="header" style="background:green; color:yellow; text-align:center;
+    text-align:middle; height:25px; font-size:15px; padding:20px;">
+        Map Tracker
+    </div>
+
+    <form>
+        <input type="button" id="watch" value="Watch me">
+        <input type="button" id="clearWatch" value="Clear watch">
+    </form>
+
+    <div id="location">
+        여러분의 위치가 여기에 나타날 것입니다.
+    </div>
+
+    <div id="distance">
+        서울역과의 거리가 여기에 나타날 것입니다.
+    </div>
+
+    <div id="map">
+    </div>
+
+</body>
+
+</html>
