--- a/c5_ek/8m_map_jquery/index.html
+++ b/c5_ek/8m_map_jquery/index.html
@@ -11,8 +11,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
     <script src="https://maps.google.com/maps/api/js?key=AIzaSyD0dTlLe0Ly-mXcGG9B_BmvhaeAVrha2To"></script>
     <script src="m_myLoc.js"></script>
@@ -30,15 +30,15 @@
         <input type="button" id="clearWatch" value="Clear watch">
     </form>
 
+    <div id="map">
+    </div>
+
     <div id="location">
         여러분의 위치가 여기에 나타날 것입니다.
     </div>
 
     <div id="distance">
         서울역과의 거리가 여기에 나타날 것입니다.
-    </div>
-
-    <div id="map">
     </div>
 
 </body>
