--- a/c6_ex1(ajax)/gumball.html
+++ b/c6_ex1(ajax)/gumball.html
@@ -8,31 +8,34 @@ window.onload = init;
 
 function init() {
 	//추가1
+	getSales();
 }
 
 function getSales() {
     //추가1
+	var url = "sales.json";
+	var request = new XMLHttpRequest();
+	request.open("GET", url);
+	request.onload = function() {
+		if (request.status == 200) {
+			updateSales(request.responseText);
+		}
+	};
+	request.send(null);
 }
 
 function updateSales(responseText) {
     //추가1
+	var salesDiv = document.getElementById("sales");
+	var sales = JSON.parse(responseText);
+	for (var i = 0; i < sales.length; i++) {
+		var sale = sales[i];
+		var div = document.createElement("div");
+		div.setAttribute("class", "saleItem");
+		div.innerHTML = sale.name + " sold " + sale.sales + " gumballs";
+		salesDiv.appendChild(div);
+	}
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </script>
 
@@ -77,7 +80,8 @@ div.saleItem:last-child {
 <h1>마이티 검볼 판매</h1>
 
 <!-- 추가2 -->
-
+<div id="sales">
+</div>
 
 </body>
 </html>
