--- a/c5_ek/8m_map_bootstrap/index.html
+++ b/c5_ek/8m_map_bootstrap/index.html
@@ -21,12 +21,12 @@
 </head>
 
 <body>
-        <button type="button" class="btn btn-warning btn-block">get my location</button>
+        <button type="button" class="btn btn-warning btn-block">내 위치 보여주기</button>
 
     <form>
         <center>
-        <button type="button" class="btn btn-outline-secondary" id="watch">Watch Me</button>
-        <button type="button" class="btn btn-outline-danger">Clear Watch</button
+        <button type="button" class="btn btn-light btn-outline-secondary" id="watch">WATCH LOCATION</button>
+        <button type="button" class="btn btn-light btn-outline-danger">CLEAR WATCH</button
         </center>
     </form>
 
