--- a/c6_ex3(mashup)/ex02_json_ex/lecture.html
+++ b/c6_ex3(mashup)/ex02_json_ex/lecture.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
-	<title>지유정_관악구 강좌 리스트-객체</title>
+	<title>3313지유정_관악구 강좌 리스트-객체</title>
 	<script type="text/javascript" src="lecture.js"></script>
 	<link rel="stylesheet" href="lecture.css">
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
 </head>
 <body>
