--- a/c6_ex3(mashup)/ex01_xml_ex/subway.html
+++ b/c6_ex3(mashup)/ex01_xml_ex/subway.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>지유정Subway_xml</title>
+        <title>3313지유정Subway_xml</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
         <script src="subway.js"></script>
