지도 타입 바꾸기

--- a/kakaomap/map13_1.html
+++ b/kakaomap/map13_1.html
@@ -6,17 +6,17 @@
     <title>3313지유정_지도 타입 바꾸기2</title>
 </head>
 
-<body>
+<body style="background: black;">
     <center>
-        <font color=blue size=5>한강변 자전거 도로 현황</font>
+        <font color=white size=5>한강변 자전거 도로 현황</font>
     </center>
     <div id="map" style="width:100%;height:350px;"></div>
     <p>
-        <input type="checkbox" id="chkUseDistrict" onclick="setOverlayMapTypeId()" /> 지적편집도 정보 보기
-        <input type="checkbox" id="chkTerrain" onclick="setOverlayMapTypeId()" /> 지형정보 보기
-        <input type="checkbox" id="chkTraffic" onclick="setOverlayMapTypeId()" /> 교통정보 보기
-        <input type="checkbox" id="chkBicycle" onclick="setOverlayMapTypeId()" /> 자전거도로 정보 보기
-        <input type="checkbox" id="chkOverlay" onclick="setOverlayMapTypeId()" /> 오버레이 보기
+        <input type="checkbox" id="chkUseDistrict" onclick="setOverlayMapTypeId()" /> <font color=white>지적편집도 정보 보기</font>
+        <input type="checkbox" id="chkTerrain" onclick="setOverlayMapTypeId()" /> <font color=white>지형정보 보기</font>
+        <input type="checkbox" id="chkTraffic" onclick="setOverlayMapTypeId()" /> <font color=white>교통정보 보기</font>
+        <input type="checkbox" id="chkBicycle" onclick="setOverlayMapTypeId()" /> <font color=white>자전거도로 정보 보기</font>
+        <input type="checkbox" id="chkOverlay" onclick="setOverlayMapTypeId()" /> <font color=white>오버레이 보기</font>
     </p>
 
     <script type="text/javascript"
