지도 타입 바꾸기

--- a/kakaomap/map13_1.html
+++ b/kakaomap/map13_1.html
@@ -8,7 +8,7 @@
 
 <body style="background: black;">
     <center>
-        <font color=white size=5>한강변 자전거 도로 현황</font>
+        <font color=white size=5>한강변 지도 정보 현황</font>
     </center>
     <div id="map" style="width:100%;height:350px;"></div>
     <p>
