--- a/c6_ex3(mashup)/2_parking_ex/index.html
+++ b/c6_ex3(mashup)/2_parking_ex/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/logo.png" />
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="192x192"/>
-	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="mobile-web-app-cap able" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 
 	<script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
@@ -39,15 +39,15 @@
 		</div>
 		<!--   1.지도  ->  3.셀렉트 유료 무료 버튼  4. 평일/주말, 평일 버튼 -> 5.버튼 -> 6.검정배경  ->  7.공영주차장그림 -->
 		<div><center>
-			<select class="btn btn-outline-primary" id="pay" style="height:30px; width:75px; z-index:3; font-family:dotum;font-size:15px; vertical-align:middle; ">
+			<select class="btn btn-outline-secondary" id="pay" style="height:30px; width:75px; z-index:3; font-family:dotum;font-size:15px; vertical-align:middle; ">
 			<option value="notfree" seleceted> 유료</option>
 			<option value="free">무료</option>
 			</select>
-			<select class="btn btn-outline-primary" id="run" style="height:30px; width:180px; z-index:4; font-family:dotum; font-size:15px; vertical-align:middle">
+			<select class="btn btn-outline-secondary" id="run" style="height:30px; width:180px; z-index:4; font-family:dotum; font-size:15px; vertical-align:middle">
 			<option value="week" seleceted> 평일/주말 이용가능</option>
 			<option value="weekday">평일 이용가능</option>
 			</select>
-			<button class="btn btn-outline-danger" type="button"  id="button" 
+			<button class="btn btn-outline-success" type="button"  id="button" 
 			style="height:30px; width:60px; z-index:5; font-family:dotum;font-size:15px; vertical-align:middle; cursor:pointer;">검색
 			</button></center>
 		</div>
