--- a/c6_ex3(mashup)/3_librarysearchomit_top_ex/index.html
+++ b/c6_ex3(mashup)/3_librarysearchomit_top_ex/index.html
@@ -1,13 +1,14 @@
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/logo1.png" />
-	<link rel="icon" type="image/png" href="img/logo1.png" sizes="192x192"/>
+	<link rel="icon" type="image/png" href="img/logo1.png" sizes="192x192" />
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 
-	<title>윤선희_도서관검색</title>
+	<title>3313지유정_도서관검색</title>
 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.8.18/themes/redmond/jquery-ui.css" />
@@ -19,62 +20,74 @@
 	<script src="lib.js"></script>
 	<link rel="stylesheet" href="lib.css">
 
-	<script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=키연결&libraries=services"></script> 
+	<script type="text/javascript"
+		src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=68531c38673fd6237787eeb6b31182ff&libraries=services"></script>
 
 	<style>
-	html, body {
-	padding:0px;
-	margin:0px;
-	width:100%;
-	height:100%;
-	}
+		html,
+		body {
+			padding: 0px;
+			margin: 0px;
+			width: 100%;
+			height: 100%;
+		}
 	</style>
 </head>
 
 <body>
+	<div id="cover_close" onclick="document.getElementById('cover_close').style.display = 'none';"
+		style="cursor:pointer;">
+		<!-- style.display = 'none': click 하면 사라짐 -->
+		<img src="bg_img.png" style="width:100%; height:100%; position:absolute; z-index:5;">
+		<br> <br> <br> <br> <br>
+		<img src="fg_txt.png" style="width:70%;left:15%; position:absolute; z-index:7;">
+	</div>
+	<div data-role="header">
+		<center>
+			<div style="background-color: #646464">
+				<font color="#ffffff" size=5>서울시 공공도서관 정보</font>
+			</div>
+		</center>
+	</div>
+	<center>
+		<font size=2 color="white"
+			style="z-index:4;font-family:dotum; font-size:5; vertical-align:middle; margin-top:5px;">구별 검색</font>
+		<SELECT id="gu" style="z-index:4;font-family:dotum; font-size:0.7em; vertical-align:middle; margin-top:5px;">
+			<option value="강남구">강남구</option>
+			<option value="강동구">강동구</option>
+			<option value="강북구">강북구</option>
+			<option value="강서구">강서구</option>
+			<option value="관악구">관악구</option>
+			<option value="광진구">광진구</option>
+			<option value="구로구">구로구</option>
+			<option value="금천구">금천구</option>
+			<option value="노원구">노원구</option>
+			<option value="도봉구">도봉구</option>
+			<option value="동대문구">동대문구</option>
+			<option value="동작구">동작구</option>
+			<option value="마포구">마포구</option>
+			<option value="서대문구">서대문구</option>
+			<option value="서초구">서초구</option>
+			<option value="성동구">성동구</option>
+			<option value="성북구">성북구</option>
+			<option value="송파구">송파구</option>
+			<option value="양천구">양천구</option>
+			<option value="영등포구">영등포구</option>
+			<option value="용산구">용산구</option>
+			<option value="은평구">은평구</option>
+			<option value="종로구">종로구</option>
+			<option value="중구">중구</option>
+			<option value="중랑구">중랑구</option>
+		</SELECT>
+		<input type=button value="검색" onclick="find()"
+			style="font-family:dotum; font-size:0.7em; vertical-align:middle; margin-top:5px; background-color:#fff; border:0; cursor:pointer;" /><br>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	
+	</center>
+	<hr color="white" size=3>
+	</hr>
+	<div id="map"></div>
+	<div><img id="toTop" src="img/up-arrow-icon.png" onclick="go_top()" style="z-index:9;" /></div>
+	<div id="librarys"></div>
 </body>
+
 </html>
