--- a/c6_ex3(mashup)/3_librarysearchomit_top_ex/index.html
+++ b/c6_ex3(mashup)/3_librarysearchomit_top_ex/index.html
@@ -50,8 +50,7 @@
 		</center>
 	</div>
 	<center>
-		<font size=2 color="white"
-			style="z-index:4;font-family:dotum; font-size:5; vertical-align:middle; margin-top:5px;">구별 검색</font>
+		<font size=2 color="white">구별 검색</font>
 		<SELECT id="gu" style="z-index:4;font-family:dotum; font-size:0.7em; vertical-align:middle; margin-top:5px;">
 			<option value="강남구">강남구</option>
 			<option value="강동구">강동구</option>
@@ -79,8 +78,7 @@
 			<option value="중구">중구</option>
 			<option value="중랑구">중랑구</option>
 		</SELECT>
-		<input type=button value="검색" onclick="find()"
-			style="font-family:dotum; font-size:0.7em; vertical-align:middle; margin-top:5px; background-color:#fff; border:0; cursor:pointer;" /><br>
+		<input type=button value="검색" onclick="find()"/><br>
 
 	</center>
 	<hr color="white" size=3>
