--- a/c6_ex3(mashup)/3_librarysearchomit_top_ex/index.html
+++ b/c6_ex3(mashup)/3_librarysearchomit_top_ex/index.html
@@ -34,7 +34,7 @@
 	<div data-role="header">
 		<center>
 			<div style="background-color: #646464">
-				<font color="#ffffff" size=5>서울시 공공도서관 정보</font>
+				<font color="#ffffff" size=5>서울시 도서관 검색</font>
 			</div>
 		</center>
 	</div>
