--- a/c7_1_ex/shape12_1(배경색추가).html
+++ b/c7_1_ex/shape12_1(배경색추가).html
@@ -73,9 +73,10 @@
 		<select id="backgroundColor">
 		<option value="white" selected="selected">White</option>
   		<!--	추가1 -->
-	
-	
-	
+		<option value="black">Black</option>
+		<option value="yellow">yellow</option>
+		<option value="pink">pink</option>
+		<option value="lightblue">lightblue</option>
 		</select>
 	</p>
 	<p>
