--- a/c7_1_ex/shape12-3(원네모크기변경).html
+++ b/c7_1_ex/shape12-3(원네모크기변경).html
@@ -47,29 +47,26 @@
 
 	}
 
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+	function drawSquare(canvas, context) {
+		var w = Math.floor(Math.random() * 40);
+		var x = Math.floor(Math.random() * canvas.width);
+		var y = Math.floor(Math.random() * canvas.height);
+
+		context.fillStyle = "magenta";
+		context.fillRect(x, y, w, w+15);
+	}
+
+	function drawCircle(canvas, context) {
+		var radius = Math.floor(Math.random() * 10);
+		var x = Math.floor(Math.random() * canvas.width);
+		var y = Math.floor(Math.random() * canvas.height);
+
+		context.beginPath();
+		context.arc(x, y, radius, 0, degreesToRadians(360), true);
+
+		context.fillStyle = "blue";
+		context.fill();
+	}
 
 	function degreesToRadians(degrees) {
 	    return (degrees * Math.PI)/180;
