--- a/c7_1_ex/shape12-4(라인추가).html
+++ b/c7_1_ex/shape12-4(라인추가).html
@@ -34,11 +34,11 @@
 				drawCircle(canvas, context);
 			}
 		}
-
-		
-		
-		
-		
+		else if (shape == "line") {
+			for (var line = 0; line < 20; line++) {
+				drawline(canvas, context);
+			}
+		}
 	}
 
 	// This is where we'll set the background color
@@ -61,27 +61,24 @@
 		context.fillStyle = "magenta";
 		context.fillRect(x, y, w, w+20);
 	}
-//추가
 
+	//추가
+	function drawline(canvas, context) {
+		var w = Math.floor(Math.random() * 200);
+		var x = Math.floor(Math.random() * canvas.width);
+		var y = Math.floor(Math.random() * canvas.height);
 
+		context.beginPath();	// 새로운 경로 그리기 시작
+		context.moveTo(w, w);
+		context.lineTo(x, y);
+		context.closePath();	// 경로 닫기
+		context.lineWidth = 5;
+		
+		context.strokeStyle = '#ff0000';	// 선 색 설정
+		context.stroke();	// 경로에 따라 선 그리기
+	}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-//추가 끝
+	//추가 끝
 	// Draws a circle at a random location
 	function drawCircle(canvas, context) {
 		var radius = Math.floor(Math.random() * 40);
