separate html,css,js

--- a/c7_1_ex/prob1(분리와shapecolor)/index.html
+++ b/c7_1_ex/prob1(분리와shapecolor)/index.html
@@ -1,12 +1,10 @@
 <html>
 <head>
-<title>TweetShirt</title>
-<meta charset="utf-8" />
-
-
-	
-
-
+	<title>TweetShirt</title>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" href="index.css">
+	<script type="text/javascript" src="index.js">
+	</script>
 </head>
 <body>
 	<canvas width="600" height="200" id="tshirtCanvas">
@@ -27,17 +25,17 @@
 			</select>
 		</p>
 
-		
-
-
-
-
-
-
-
-
-
-
+		<p>
+			<label for="shapeColor">Select shapeColor:</label> <select
+				id="shapeColor">
+				<option value="magenta" selected="selected">Magenta</option>
+				<option value="black">Black</option>
+				<option value="green">Green</option>
+				<option value="gray">Gray</option>
+				<option value="yellow">Yellow</option>
+				<option value="red">Red</option>
+			</select>
+		</p>
 
 		<p>
 			<label for="shape">Select shape?</label> <select id="shape">
