--- a/c7_2_ex/prob1(분리와shapecolor)/method1_parameter/index_para.html
+++ b/c7_2_ex/prob1(분리와shapecolor)/method1_parameter/index_para.html
@@ -24,13 +24,13 @@
 		</select>
 	</p>
 	<p>
-
-
-
-
-
-
-
+		<label for="shapecolor">Select shape color:</label>
+		<select id="shapecolor">
+			<option value="red" selected="selected">Red</option>
+			<option value="green">Green</option>
+			<option value="orange">Orange</option>
+			<option value="blue">Blue</option>
+		</select>
 	</p>
 	<p>
 		<label for="shape">Select shape?</label>
