--- a/c7_2_ex/prob4_mobile/method1_calendar/index.html
+++ b/c7_2_ex/prob4_mobile/method1_calendar/index.html
@@ -6,25 +6,26 @@
 	<script src="external/jquery/jquery.js"></script>
 	<script src="jquery-ui.js"></script>
 	<style>
-/* 해당부분만 남기기 */
-
-
-
-
-
-
+		/* 해당부분만 남기기 */
+		body{
+			font-family: "Trebuchet MS", sans-serif;
+			margin: 50px;
+		}
+		.demoHeaders {
+			margin-top: 2em;
+		}
 	</style>
 </head>
 <body>
-<!-- 해당부분만 남기기 -->
+	<!-- 해당부분만 남기기 -->
+	<h2 class="demoHeaders">Datepicker</h2>
+	<div id="datepicker"></div>
 
-
-
-
-<script>
-/* 해당부분만 남기기 */
-
-
-</script>
+	<script>
+		/* 해당부분만 남기기 */
+		$( "#datepicker" ).datepicker({
+			inline: true
+		});
+	</script>
 </body>
 </html>
