practice canvas(mobile)

--- a/c7_2_ex/prob4_mobile/method4_mobile-width/index_mo.html
+++ b/c7_2_ex/prob4_mobile/method4_mobile-width/index_mo.html
@@ -5,9 +5,9 @@
 
 	<!--최신 모바일형태-->
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-
-
- 
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<!--모바일형태-->	
 
 	<link rel="stylesheet" href="index_mo.css">
